add required data

--- a/rekomendasi mitra prioritas/processing_mitra_prioritas.ipynb
+++ b/rekomendasi mitra prioritas/processing_mitra_prioritas.ipynb
@@ -2,29 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "import json\n",
-    "import xlrd"
+    "import xlrd\n",
+    "import datetime \n",
+    "import locale"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generateIdDesa(dataDf) :\n",
-    "    return dataDf['Alamat Prov']+dataDf[\"Alamat Kab\"]+dataDf[\"Alamat Kec\"]+dataDf[\"Alamat Desa\"]"
+    "    return dataDf['Alamat Prov']+dataDf[\"Alamat Kab\"]+dataDf[\"Alamat Kec\"]+dataDf[\"Alamat Desa\"]\n",
+    "def hitungUmur(dataDf):\n",
+    "    today = datetime.date.today()\n",
+    "    ages = []\n",
+    "    for _, row in dataDf.iterrows():\n",
+    "        [hari, bulan, tahun] = row['Tanggal Lahir (dd/mm/yyyy)'].split('/')\n",
+    "        age = today.year - int(tahun) - ((int(bulan), today.day) < (int(bulan), int(hari)))\n",
+    "        ages.append(age)\n",
+    "    return ages\n",
+    "def transformTanggal(dataDf):\n",
+    "    locale.setlocale(locale.LC_ALL, 'id_ID.utf8')\n",
+    "    tanggals = []\n",
+    "    for _, row in dataDf.iterrows():\n",
+    "        [hari, bulan, tahun] = row['Tanggal Lahir (dd/mm/yyyy)'].split('/')\n",
+    "        dt = datetime.datetime(year=int(tahun), month=int(bulan), day=int(hari))\n",
+    "        tanggals.append(dt.strftime(\"%d %B %Y\"))\n",
+    "    return tanggals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,12 +77,45 @@
     "})\n",
     "    if 'iddesa' not in tempDf.columns:\n",
     "        tempDf['iddesa'] = generateIdDesa(tempDf)\n",
+    "    tempDf['Umur'] = hitungUmur(tempDf)\n",
+    "    tempDf['Tanggal Lahir'] = transformTanggal(tempDf)\n",
     "    kegiatanPath = '_'+GLOBAL_VAR[\"kode_satker\"]+'_exportmitra.xlsx'\n",
     "    kegiatan = kegiatan.replace(kegiatanPath, \"\")\n",
     "    tempObj = {\"kegiatan\":kegiatan,\n",
     "               \"mitra\":tempDf}\n",
     "    \n",
     "    dfs.append(tempObj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        26 Januari 1990\n",
+       "1            16 Mei 1991\n",
+       "2        27 Agustus 1990\n",
+       "3          10 April 1982\n",
+       "4          05 Maret 1986\n",
+       "             ...        \n",
+       "297         16 Juni 1972\n",
+       "298     29 November 1999\n",
+       "299        25 April 1983\n",
+       "300      02 Oktober 1993\n",
+       "301    21 September 2001\n",
+       "Name: Tanggal Lahir, Length: 302, dtype: object"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs[0]['mitra']['Tanggal Lahir']"
    ]
   },
   {
@@ -89,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +175,6 @@
        "      <th>Tanggal Lahir (dd/mm/yyyy)</th>\n",
        "      <th>NPWP</th>\n",
        "      <th>...</th>\n",
-       "      <th>Mengikuti Pendataan BPS</th>\n",
        "      <th>SP</th>\n",
        "      <th>ST</th>\n",
        "      <th>SE</th>\n",
@@ -134,6 +184,7 @@
        "      <th>Catatan</th>\n",
        "      <th>Posisi Daftar</th>\n",
        "      <th>iddesa</th>\n",
+       "      <th>Umur</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -155,11 +206,11 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Kortim</td>\n",
        "      <td>1507021008</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -177,13 +228,13 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>PPL</td>\n",
        "      <td>1507021005</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -199,7 +250,6 @@
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -208,6 +258,7 @@
        "      <td>NaN</td>\n",
        "      <td>PPL</td>\n",
        "      <td>1507021002</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -225,13 +276,13 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>Trim's</td>\n",
        "      <td>PPL</td>\n",
        "      <td>1507031001</td>\n",
+       "      <td>41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -250,12 +301,12 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>Sukses selalu</td>\n",
        "      <td>Kortim</td>\n",
        "      <td>1507031010</td>\n",
+       "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -271,7 +322,6 @@
        "      <td>73.717.000.1-334.000</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -280,10 +330,11 @@
        "      <td>Semoga bisa bekerja sama, terima kasih</td>\n",
        "      <td>PPL</td>\n",
        "      <td>1507031008</td>\n",
+       "      <td>33</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6 rows × 27 columns</p>\n",
+       "<p>6 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -311,34 +362,34 @@
        "4                          Lintas roro kuala tungkal              1   \n",
        "5                            Jl. Simpang Semau RT 03              1   \n",
        "\n",
-       "  Tanggal Lahir (dd/mm/yyyy)                  NPWP  ...  \\\n",
-       "0                 26/01/1990                   NaN  ...   \n",
-       "1                 16/05/1991                   NaN  ...   \n",
-       "2                 27/08/1990                   NaN  ...   \n",
-       "3                 10/04/1982  73.243.563.1-334.000  ...   \n",
-       "4                 05/03/1986                   NaN  ...   \n",
-       "5                 24/03/1989  73.717.000.1-334.000  ...   \n",
+       "  Tanggal Lahir (dd/mm/yyyy)                  NPWP  ...  SP  ST  SE  Susenas  \\\n",
+       "0                 26/01/1990                   NaN  ...   1   1   1        1   \n",
+       "1                 16/05/1991                   NaN  ...   1   1   1        0   \n",
+       "2                 27/08/1990                   NaN  ...   1   0   0        1   \n",
+       "3                 10/04/1982  73.243.563.1-334.000  ...   1   1   1        0   \n",
+       "4                 05/03/1986                   NaN  ...   1   1   1        1   \n",
+       "5                 24/03/1989  73.717.000.1-334.000  ...   1   0   1        0   \n",
        "\n",
-       "   Mengikuti Pendataan BPS  SP  ST  SE  Susenas Sakernas SBH  \\\n",
-       "0                        1   1   1   1        1        1   0   \n",
-       "1                        1   1   1   1        0        0   0   \n",
-       "2                        1   1   0   0        1        1   0   \n",
-       "3                        1   1   1   1        0        0   0   \n",
-       "4                        1   1   1   1        1        0   0   \n",
-       "5                        1   1   0   1        0        0   0   \n",
+       "   Sakernas SBH                                 Catatan  Posisi Daftar  \\\n",
+       "0         1   0                                     NaN         Kortim   \n",
+       "1         0   0                                     NaN            PPL   \n",
+       "2         1   0                                     NaN            PPL   \n",
+       "3         0   0                                  Trim's            PPL   \n",
+       "4         0   0                           Sukses selalu         Kortim   \n",
+       "5         0   0  Semoga bisa bekerja sama, terima kasih            PPL   \n",
        "\n",
-       "                                  Catatan  Posisi Daftar      iddesa  \n",
-       "0                                     NaN         Kortim  1507021008  \n",
-       "1                                     NaN            PPL  1507021005  \n",
-       "2                                     NaN            PPL  1507021002  \n",
-       "3                                  Trim's            PPL  1507031001  \n",
-       "4                           Sukses selalu         Kortim  1507031010  \n",
-       "5  Semoga bisa bekerja sama, terima kasih            PPL  1507031008  \n",
+       "       iddesa  Umur  \n",
+       "0  1507021008    32  \n",
+       "1  1507021005    31  \n",
+       "2  1507021002    32  \n",
+       "3  1507031001    41  \n",
+       "4  1507031010    37  \n",
+       "5  1507031008    33  \n",
        "\n",
-       "[6 rows x 27 columns]"
+       "[6 rows x 28 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +492,7 @@
        "4        15     JAMBI       07  TANJUNG JABUNG BARAT      014  RENAH MENDALUH"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +535,7 @@
        " 'UDP23_1']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,14 +551,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# data yang dihasilkan di output file nanti, silahkan tambahkan atau kurangin\n",
     "kolomOutput = [\n",
-    "    \"NIK\",\n",
     "    \"Nama\",\n",
+    "    \"NIK\",\n",
+    "    \"Jenis Kelamin\"\n",
+    "    \"Tanggal Lahir\",\n",
+    "    \"Umur\",\n",
+    "    \"Pendidikan\",\n",
+    "    \"Email\",\n",
     "    \"Username\",\n",
     "    \"No Telp\",\n",
     "    \"Alamat Prov\",\n",
@@ -558,6 +614,13 @@
     "                        else :\n",
     "                             mitra[kolom] = master_data_kec.loc[idx[0], 'nama_kec']\n",
     "                        # mitra[kolom]=desa['nmkec']\n",
+    "                    case 'Jenis Kelamin':\n",
+    "                        if(row[kolom]==1):\n",
+    "                            mitra[kolom]='Laki-laki'\n",
+    "                        elif(row[kolom]==2):\n",
+    "                            mitra[kolom]='Perempuan'\n",
+    "                        else:\n",
+    "                            mitra[kolom]='Tidak memberitahu'\n",
     "                    case _:\n",
     "                        mitra[kolom] = row[kolom]\n",
     "\n",
@@ -587,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -596,6 +659,10 @@
        "{'NIK': '1506132601900001',\n",
        " 'Nama': 'Joni wahyudi',\n",
        " 'Username': 'Joniwahyudi',\n",
+       " 'Tanggal Lahir': '26 Januari 1990',\n",
+       " 'Umur': 32,\n",
+       " 'Pendidikan': 3,\n",
+       " 'Email': 'wahyudij791@gmail.com',\n",
        " 'No Telp': '+62 852-6689-2830',\n",
        " 'Alamat Prov': 'JAMBI',\n",
        " 'Alamat Kab': 'TANJUNG JABUNG BARAT',\n",
@@ -619,7 +686,7 @@
        " 'UDP23_1': 'Tidak Mendaftar'}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +999,7 @@
     "mitraFinalPd = pd.read_json(jsonObj, dtype={\n",
     "    \"NIK\":str\n",
     "})\n",
-    "outputPath = 'hasil/'+GLOBAL_VAR['kode_satker']+'.csv'\n",
+    "outputPath = 'hasil/mitra '+GLOBAL_VAR['kode_satker']+'.csv'\n",
     "mitraFinalPd.to_csv(outputPath)\n",
     "mitraFinalPd.loc[0:5, ~mitraFinalPd.columns.isin(['NIK', 'Nama', 'Email', 'Username'])]"
    ]
